--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   json_serializable: ^6.0.1
   json_annotation: ^4.3.0
   get: ^4.3.8
+  flutter_hooks: ^0.18.1
 
 dev_dependencies:
   flutter_test:
