--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   cbl_flutter: ^1.0.0-beta.10
+  cbl_flutter_ce: ^1.0.0-beta.4
   cbl: ^1.0.0-beta.11
   hooks_riverpod: ^1.0.1
   freezed_annotation: ^1.0.0
@@ -20,6 +21,7 @@ dependencies:
   json_annotation: ^4.3.0
   get: ^4.3.8
   flutter_hooks: ^0.18.1
+  path_provider: ^2.0.7
 
 dev_dependencies:
   flutter_test:
